--- a/css/blocks/footer-navigation/footer-navigation.css
+++ b/css/blocks/footer-navigation/footer-navigation.css
@@ -5,6 +5,6 @@
   .footer-navigation{
     flex-basis: 90%;
     flex-direction: column;
-    align-items: center;
+    align-items: baseline;
   }
 }
